-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar field
The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
/data/mci/057f651ec8bcea642b07204a1bffe58a/bazel_cache/d40f160aeebadd4ff46fb783ccfecdaf/execroot/_main/src/mongo/db/query/compiler/physical_model/query_solution/query_solution.h:1574: UNINIT_CTOR 183890 Class member declaration for "startKeyInclusive".
/data/mci/057f651ec8bcea642b07204a1bffe58a/bazel_cache/d40f160aeebadd4ff46fb783ccfecdaf/execroot/_main/src/mongo/db/query/compiler/physical_model/query_solution/query_solution.h:1548: UNINIT_CTOR 183890 Non-static class member "startKeyInclusive" is not initialized in this constructor nor in any functions that it calls.
/data/mci/057f651ec8bcea642b07204a1bffe58a/bazel_cache/d40f160aeebadd4ff46fb783ccfecdaf/execroot/_main/src/mongo/db/query/compiler/physical_model/query_solution/query_solution.h:1577: UNINIT_CTOR 183890 Class member declaration for "endKeyInclusive".
/data/mci/057f651ec8bcea642b07204a1bffe58a/bazel_cache/d40f160aeebadd4ff46fb783ccfecdaf/execroot/_main/src/mongo/db/query/compiler/physical_model/query_solution/query_solution.h:1548: UNINIT_CTOR 183890 Non-static class member "endKeyInclusive" is not initialized in this constructor nor in any functions that it calls.