SERVER-114656 Properly initialize scalar values for QuerySolutionNodeWithSortSet (#45244)

Co-authored-by: Samuel Mercier <samontea@users.noreply.github.com>
GitOrigin-RevId: a078fb5ed64b376da05d5ab92b022609bb97257f